fix: add `largeMobileHeadeline` attr for  bib headeline size, fix flickering issue in fullscreen

--- a/components/bibtemplate/src/styles/style.scss
+++ b/components/bibtemplate/src/styles/style.scss
@@ -38,6 +38,10 @@
   border: none;
   background-color: transparent;
   cursor: pointer;
+
+  [auro-icon] {
+    --ds-auro-icon-size: 2.5rem;
+  }
 }
 
 #bodyContainer {
